crates/fig-lexer/tests/snapshots/integration_tests__expressions__type_access.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Func
- Ident: type_access_exprs
- LParen
- RParen
- Arrow
- Ident: ok
- Newline
- Indent
- Let
- Ident: x
- Eq
- Ident: Foo
- ColonColon
- Ident: BAR
- Newline
- Let
- Ident: y
- Eq
- Ident: std
- ColonColon
- Ident: io
- ColonColon
- Ident: STDIN
- Newline
- Let
- Ident: z
- Eq
- Ident: Color
- ColonColon
- Ident: RED
- Newline
- Pass
- Newline
- Dedent
